demo/demo.view.css
[mol_demo] {
	flex: 1 1 auto;
	display: flex;
	align-content: flex-start;
	align-items: stretch;
	flex-direction: column;
	transform: translateZ(0);
	max-width: 100%;
}

[mol_demo_header] {
	display: flex;
	line-height: 1.5rem;
}

[mol_demo_titler] {
	padding: 0 1rem;
}

[mol_demo_screener] {
	overflow: hidden;
	box-shadow: 0 0 0 1px var( --mol_skin_light_line );
	background: var( --mol_skin_card );
	color: var( --mol_skin_light_text );
	position: relative;
	flex: 1 1 auto;
	display: flex;
	align-content: flex-start;
	align-items: flex-start;
	box-sizing: border-box;
	height: 100%;
	margin: 0;
}

[mol_demo_large] {
	flex: 1 1 100%;
	align-self: stretch;
}

[mol_demo_medium] {
	flex: 0 1 auto;
}

[mol_demo_small] {
	flex: 0 0 auto;
}

[mol_demo_small_screener] {
	width: 500px;
	height: 280px;
}

